Make modal scroll horizontally when too big and fix width on mobile devices

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -52,6 +52,16 @@ ul#side-bar-list li.selected {
     width: 75%;
 }
 
+/*
+ * for an explanation:
+ * same media query from posts.css
+ * */
+@media (max-width: 991px) {
+    #post-box {
+	width: 100%;
+    }
+}
+
 #post-header a {
     cursor: pointer;
 }
